[package]
name = "microservices"
version = "0.12.0"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@cyphernet.org>"]
description = "Channel-based non-blocking microservices without use of async"
repository = "https://github.com/cyphernet-org/microservices"
homepage = "https://cyphernet.org"
keywords = ["microservices", "non-async", "channels"]
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "microservices"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
crossbeam-channel = "0.5.13"
log = { version = "0.4.17", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = false
features = []
rustc-args = ["--cfg", "docsrs"]

[features]
default = []
all = ["log", "stderr"]

stderr = []
log = ["dep:log"]
